--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --config webpack.dev.js",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "predeploy": "npm run build && git add dist && git commit -m 'deploying a new dist'",
+    "deploy": "git subtree push --prefix dist origin gh-pages",
+    "postdeploy": "rm -r dist"
   },
   "keywords": [],
   "author": "",
