--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack serve --config webpack.dev.js",
     "predeploy": "npm run build && git add dist && git commit -m 'deploying a new dist'",
     "deploy": "git subtree push --prefix dist origin gh-pages",
-    "postdeploy": "rm -r dist"
+    "postdeploy": "rm -r dist",
+    "lint": "npx eslint src/"
   },
   "keywords": [],
   "author": "",
